# docs/swagger.json
@@ -1411,8 +1411,11 @@
             }
         },
         "/api/tracks/feed": {
-            "get": {
+            "post": {
                 "description": "Feed tracks",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1420,6 +1423,17 @@
                     "Feed"
                 ],
                 "summary": "Track Feed",
+                "parameters": [
+                    {
+                        "description": "Feed info",
+                        "name": "tfi",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.trackFeedInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Tracks feed",
@@ -1586,6 +1600,44 @@
                         "description": "Like set",
                         "schema": {
                             "$ref": "#/definitions/http.trackLikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Client error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/tracks/{trackID}/listen": {
+            "post": {
+                "description": "Add one listen of track by current user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Track"
+                ],
+                "summary": "Increment track's listens",
+                "responses": {
+                    "200": {
+                        "description": "Listen added",
+                        "schema": {
+                            "$ref": "#/definitions/http.trackIncrementListensResponse"
                         }
                     },
                     "400": {
@@ -2270,9 +2322,6 @@
                 "password": {
                     "type": "string"
                 },
-                "sex": {
-                    "$ref": "#/definitions/models.Sex"
-                },
                 "username": {
                     "type": "string"
                 }
@@ -2325,6 +2374,22 @@
                 }
             }
         },
+        "http.trackFeedInput": {
+            "type": "object",
+            "properties": {
+                "days": {
+                    "type": "integer"
+                }
+            }
+        },
+        "http.trackIncrementListensResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "http.trackLikeResponse": {
             "type": "object",
             "properties": {
@@ -2347,9 +2412,6 @@
                 },
                 "lastName": {
                     "type": "string"
-                },
-                "sex": {
-                    "$ref": "#/definitions/models.Sex"
                 }
             }
         },
@@ -2438,19 +2500,6 @@
                 }
             }
         },
-        "models.Sex": {
-            "type": "string",
-            "enum": [
-                "M",
-                "F",
-                "O"
-            ],
-            "x-enum-varnames": [
-                "Male",
-                "Female",
-                "Other"
-            ]
-        },
         "models.TrackTransfer": {
             "type": "object",
             "properties": {
@@ -2509,9 +2558,6 @@
                 },
                 "lastName": {
                     "type": "string"
-                },
-                "sex": {
-                    "$ref": "#/definitions/models.Sex"
                 },
                 "username": {
                     "type": "string"
